--- a/settings.yml
+++ b/settings.yml
@@ -9,7 +9,7 @@ websocketd_version: 0.4.1
 websocketd_package: websocketd-{{websocketd_version}}-linux_amd64.zip
 websocketd_url: https://github.com/joewalnes/websocketd/releases/download/v{{websocketd_version}}/{{websocketd_package}}
 osrf_git_branch: main
-eg_git_branch: main
+eg_git_branch: rel_3_11
 
 perform_git_checkout: yes
 # 'no'  == build will fail on local changes
