--- a/playbook.yml
+++ b/playbook.yml
@@ -7,9 +7,5 @@
   vars_files:
     - settings.yml
   tasks:
-  - name: Process OpenSRF Tasks
-    include: opensrf/main.yml
-  - name: Process Evergreen Tasks
-    include: evergreen/main.yml
-  - name: Process Optional Items
-    include: extras/main.yml
+  - name: Process Database
+    include: postgres/main.yml
