--- a/postgres/eg-fetch.yml
+++ b/postgres/eg-fetch.yml
@@ -9,3 +9,23 @@
   become_user: opensrf
   when: perform_git_checkout
 
+- name: Install Evergreen Prereqs
+  become: true
+  shell: >
+    cd {{repo_base}}/Evergreen
+    && PERL_MM_USE_DEFAULT=1 make -f
+    Open-ILS/src/extras/Makefile.install {{os_build_target}}
+- name: Set ownership of {{repo_base}} to {{deploy_user}}
+  become: true
+  file: dest={{repo_base}} owner={{deploy_user}} group={{deploy_user}} recurse=yes
+- name: Build Evergreen
+  environment:
+    PATH: "{{ansible_env.PATH}}:{{eg_install_path}}/bin"
+  shell: >
+    cd {{repo_base}}/Evergreen
+    && autoreconf -i
+    && ./configure --prefix={{eg_install_path}} --sysconfdir={{eg_install_path}}/conf
+    && make
+  become: true
+  become_user: opensrf
+
