Mods to make postgres server packages only
Signed-off-by: Ubuntu <ubuntu@ip-172-30-3-111.ec2.internal>

--- a/postgres/setup.yml
+++ b/postgres/setup.yml
@@ -1,3 +1,9 @@
+- name: Install sysutils
+  become: true
+  apt: name=make state=present
+  with_items:
+    - make
+    - git
 - name: Create opensrf user
   become: true
   user:
